--- a/Drones on Ice Mobile/Drones on Ice Mobile/Drones on Ice Mobile/Base.lproj/Main.storyboard
+++ b/Drones on Ice Mobile/Drones on Ice Mobile/Drones on Ice Mobile/Base.lproj/Main.storyboard
@@ -19,29 +19,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CNX-xE-FiU">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Adam" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CNX-xE-FiU">
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GF5-qp-ZBf">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Tyler" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GF5-qp-ZBf">
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5dv-Zo-dGv">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="@email.com" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5dv-Zo-dGv">
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password (8 or more characters)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xzN-l8-Ysn">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="password1234" borderStyle="roundedRect" placeholder="Password (8 or more characters)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xzN-l8-Ysn">
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OYF-PB-C2e">
-                                <frame key="frameInset" minX="131" minY="354" width="112" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CfE-Ja-dqZ">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OYF-PB-C2e">
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="Register"/>
                                 <connections>
@@ -50,29 +53,44 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="5dv-Zo-dGv" firstAttribute="top" secondItem="GF5-qp-ZBf" secondAttribute="bottom" constant="8" id="1jX-Dd-WpF"/>
                             <constraint firstAttribute="trailingMargin" secondItem="CNX-xE-FiU" secondAttribute="trailing" id="3Aq-3w-i9R"/>
                             <constraint firstItem="xzN-l8-Ysn" firstAttribute="top" secondItem="5dv-Zo-dGv" secondAttribute="bottom" constant="8" id="6xn-Tj-RcK"/>
                             <constraint firstItem="xzN-l8-Ysn" firstAttribute="trailing" secondItem="9E8-iT-yqn" secondAttribute="trailingMargin" id="8Mp-sV-kgL"/>
+                            <constraint firstItem="OYF-PB-C2e" firstAttribute="top" secondItem="xzN-l8-Ysn" secondAttribute="bottom" constant="20" id="Byf-BX-tHl"/>
                             <constraint firstItem="GF5-qp-ZBf" firstAttribute="trailing" secondItem="9E8-iT-yqn" secondAttribute="trailingMargin" id="F6c-fk-aIH"/>
+                            <constraint firstItem="CfE-Ja-dqZ" firstAttribute="leading" secondItem="9E8-iT-yqn" secondAttribute="leadingMargin" id="IY8-rg-h4E"/>
                             <constraint firstItem="GF5-qp-ZBf" firstAttribute="top" secondItem="CNX-xE-FiU" secondAttribute="bottom" constant="8" id="Jvx-St-wTE"/>
+                            <constraint firstItem="CfE-Ja-dqZ" firstAttribute="top" secondItem="rxy-pA-Bu9" secondAttribute="bottom" constant="40" id="Rqc-DV-92f"/>
                             <constraint firstItem="xzN-l8-Ysn" firstAttribute="leading" secondItem="9E8-iT-yqn" secondAttribute="leadingMargin" id="Sx9-M2-VHA"/>
                             <constraint firstItem="5dv-Zo-dGv" firstAttribute="trailing" secondItem="9E8-iT-yqn" secondAttribute="trailingMargin" id="g38-cN-Hye"/>
                             <constraint firstItem="CNX-xE-FiU" firstAttribute="leading" secondItem="9E8-iT-yqn" secondAttribute="leadingMargin" id="hYS-da-PEe"/>
                             <constraint firstItem="GF5-qp-ZBf" firstAttribute="leading" secondItem="9E8-iT-yqn" secondAttribute="leadingMargin" id="lXh-8a-5un"/>
-                            <constraint firstItem="CNX-xE-FiU" firstAttribute="top" secondItem="rxy-pA-Bu9" secondAttribute="bottom" constant="100" id="oRD-cJ-436"/>
+                            <constraint firstItem="OYF-PB-C2e" firstAttribute="centerX" secondItem="9E8-iT-yqn" secondAttribute="centerX" id="s7m-3K-B8j"/>
+                            <constraint firstItem="CNX-xE-FiU" firstAttribute="top" secondItem="CfE-Ja-dqZ" secondAttribute="bottom" constant="30" id="tdY-h0-jbb"/>
                             <constraint firstItem="5dv-Zo-dGv" firstAttribute="leading" secondItem="9E8-iT-yqn" secondAttribute="leadingMargin" id="ufu-Nm-6ta"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CfE-Ja-dqZ" secondAttribute="trailing" id="vfw-0J-muT"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="h0t-d7-Doh" appends="YES" id="c5Z-1a-FON"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="email" destination="5dv-Zo-dGv" id="a5L-w6-xze"/>
                         <outlet property="firstName" destination="CNX-xE-FiU" id="W6f-F5-WmK"/>
                         <outlet property="lastName" destination="GF5-qp-ZBf" id="NyJ-QB-1sM"/>
                         <outlet property="password" destination="xzN-l8-Ysn" id="QaI-zx-v9h"/>
+                        <outlet property="status" destination="CfE-Ja-dqZ" id="PU3-y9-T84"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DYt-Gz-5xx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="h0t-d7-Doh">
+                    <connections>
+                        <action selector="dismissKeyboard:" destination="mkB-gF-jU5" id="Wd2-Kf-opy"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-327.19999999999999" y="-662.51874062968523"/>
         </scene>
@@ -158,11 +176,30 @@
                     <connections>
                         <outlet property="loginButton" destination="pYh-fV-Dcx" id="9ys-ed-kBG"/>
                         <outlet property="registerButton" destination="4U4-ek-VZG" id="xT8-aW-4v8"/>
+                        <segue destination="mv6-Rc-COf" kind="presentation" identifier="showOrderPage" id="KJc-ME-NOa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="32.799999999999997" y="37.331334332833585"/>
+        </scene>
+        <!--Start Order View Controller-->
+        <scene sceneID="2qx-Rf-oCk">
+            <objects>
+                <viewController id="mv6-Rc-COf" customClass="StartOrderViewController" customModule="Drones_on_Ice_Mobile" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DVi-Ip-BIO"/>
+                        <viewControllerLayoutGuide type="bottom" id="tbh-j1-hzc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="g2A-UR-gnS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gs3-5g-dNr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="974" y="36"/>
         </scene>
     </scenes>
 </document>
