--- a/Drones on Ice Server/flask/app/templates/orderstream.html
+++ b/Drones on Ice Server/flask/app/templates/orderstream.html
@@ -29,7 +29,7 @@
         			<td>{{order.location}}</td>
         			<td>{{order.flavor}}</td>
         			<td>{{order.status}}</td>
-        			<td>{{order.timestamp}}</td>
+        			<td>{{order.timestamp.strftime("%Y-%m-%d %H:%M")}}</td>
         			<td>
         				<a href="/internal/order/ship?order={{order.id}}" class="btn btn-info" role="button">Mark as Shipped</a>
         				<a href="/internal/order/cancel?order={{order.id}}" class="btn btn-danger" role="button">Cancel Order</a>
@@ -53,7 +53,7 @@
         				<td>{{order.location}}</td>
         				<td>{{order.flavor}}</td>
         				<td>{{order.status}}</td>
-        				<td>{{order.timestamp}}</td>
+        				<td>{{order.timestamp.strftime("%Y-%m-%d %H:%M")}}</td>
         			</tr>
     			{% endfor %} 
     		</table>
@@ -72,11 +72,22 @@
         				<td>{{order.location}}</td>
         				<td>{{order.flavor}}</td>
         				<td>{{order.status}}</td>
-        				<td>{{order.timestamp}}</td>
+        				<td>{{order.timestamp.strftime("%Y-%m-%d %H:%M")}}</td>
         			</tr>
     			{% endfor %} 
     		</table>
     	{% endif %}
     </div> 
 </div>
+{% if access != 2 %}
+<script>
+     var time = new Date().getTime();
+     function refresh() {
+         if(new Date().getTime() - time >= 1000) 
+             window.location.reload(true);
+     }
+
+     setTimeout(refresh, 10000);
+</script>
+{% endif %}
 {% endblock %}
